package com.zyibin.app.blackoutradar.domain.notification;

public enum NotificationStatus {
    PENDING,
    PROCESSING,
    SENT,
    FAILED
}