@startuml
title BlackoutRadar — Domain Model

hide methods
hide stereotypes

skinparam classAttributeIconSize 0
skinparam linetype ortho

package "Identity" {

    class User {
        +UUID id
        +String email
        +UserRole role
    }
}

package "Subscription" {

    class Subscription {
        +UUID id
        +Instant monitoringStart
        +Instant monitoringEnd
        +boolean isActive
        +Instant serviceAccessUntil
    }

    class TransformerStation {
        +UUID id
        +String name
    }
}

package "Address Catalog" {

    class Region {
        +UUID id
        +String name
    }

    class RegionalDistrict {
        +UUID id
        +RegionalDistrictType type
        +String name
    }

    class City {
        +UUID id
        +String name
    }

    class CityDistrict {
        +UUID id
        +String name
    }

    class Street {
        +UUID id
        +StreetType type
        +String canonicalName
    }

    class House {
        +String houseNumber
        +String houseAddition
        +String canonicalHouse
    }

    class Address {
        +UUID id
        +House house
    }
}

package "Outage" {

    class Source {
        +UUID id
        +String name
        +String sourceType
        +String providerType
        +String configuration
        +String schedule
        +boolean isActive
    }

    class PowerOutage {
        +UUID id
        +Instant startTime
        +Instant endTime
        +String reason
        +OutageStatus status
    }

    class PowerOutageAddress {
        +UUID id
    }

    class Candidate {
        <<temporary>>
    }

    class Match {
        <<temporary>>
    }
}

package "Notification" {

    class Notification {
        +UUID id
        +String message
        +NotificationStatus status
    }

    enum NotificationStatus {
        PENDING
        PROCESSING
        SENT
        FAILED
    }
}

' Identity
User "1" -- "0..*" Subscription

' Subscription
Subscription "0..*" -- "1" Address
Subscription "0..*" -- "0..*" TransformerStation
Subscription "1" -- "0..*" Notification

' Address Catalog
Region "1" -- "0..*" RegionalDistrict
Region "1" -- "0..*" City
RegionalDistrict "0..1" -- "0..*" City
City "1" -- "0..*" CityDistrict
City "1" -- "0..*" Street
Street "1" -- "0..*" Address
CityDistrict "0..1" -- "0..*" Address
Address *-- "1" House

' Outage
Source "1" -- "0..*" PowerOutage
PowerOutage "1" *-- "1..*" PowerOutageAddress
PowerOutageAddress "*" -- "1" Address
PowerOutageAddress "*" -- "0..1" TransformerStation

' Matching
PowerOutage ..> Candidate : evaluated by\nCandidateFinder
Candidate ..> Match : evaluated by\nMatching Engine
Match ..> Subscription : matches
Match ..> PowerOutage : matches

' Notification
Notification "*" --> "1" Subscription
Notification "*" --> "1" PowerOutage

note right of Match
Temporary result of
Matching Engine.

Not persisted.

Notification does not
technically depend on Match.
end note

note right of Notification
Created after successful Match
by Application / Processing Flow.

Lifecycle:

PENDING
PROCESSING
SENT
FAILED
end note

note bottom of NotificationStatus
PROCESSING means that
Notification Engine accepted
the Notification for processing.

Retry and Delivery Attempt
are not part of the current
Notification Domain Model.
end note

@enduml